fix(Layout) - goHome button alignment

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -10,6 +10,7 @@
 }
 
 .game {
+  position: relative;
   overflow-y: scroll;
   text-align: center;
   background: linear-gradient(to bottom, $white, $gradient-end);
